--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
 		"deploy": "gh-pages -d dist"
 	},
 	"dependencies": {
+		"motion": "^12.23.6",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"react-router": "^7.7.0",
+		"react-router-dom": "^7.7.0",
+		"vite-plugin-svgr": "^4.3.0"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.15.0",
+		"@types/node": "^24.0.14",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
+		"@vitejs/plugin-react": "^4.6.0",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"eslint": "^9.15.0",
 		"eslint-plugin-react-hooks": "^5.0.0",
