--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"motion": "^12.23.6",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-icons": "^5.5.0",
 		"react-router": "^7.7.0",
 		"react-router-dom": "^7.7.0",
 		"vite-plugin-svgr": "^4.3.0"
